# automatic-octo-spork

./: .gitignore  TODO.md  design.md
.claude/: settings.json
clap-detection-main/: augment.py  dataloader.py  live.py  model.py  predict.py  record.py  requirements.txt  train.py
fury-main/: .gitignore  README.md  pyproject.toml
fury-main/.github/workflows/: tests.yml
fury-main/docs/: agent.md  example.md  history_manager.md  interruption.md  memory.md  tts.md
fury-main/examples/: README.md  chat.py  interruption.py  memory_chat.py  persistent_chat.py  tts.py  voice_chat.py
fury-main/examples/coding-assistant/: SOUL.md  coding_assistant.py
fury-main/examples/coding-assistant/docs/: skills.md
fury-main/examples/coding-assistant/skills/web_search/: SKILL.md
fury-main/src/fury/: __init__.py  agent.py  historymanager.py  memory.py  multimodal.py  runtime.py  tool_healing.py  tools.py  transport.py  tts.py  types.py  voice.py
fury-main/src/fury/utils/: audio.py  console.py  history_summary.py  neutts_minimal.py  tts.py  validation.py  voice.py
fury-main/tests/: conftest.py  test_agent_features.py  test_coding_assistant_features.py  test_console_features.py  test_history_features.py  test_memory_features.py  test_openai_httpx.py  test_tool_error_handling.py  test_tts_features.py  test_voice_features.py
jarvis-mlx-main/: README.md
nancy-billion/: .env.example  CHANGELOG.md  COMPLETE_INTEGRATION_GUIDE.md  COMPLETE_SYSTEM_SUMMARY.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_VERIFICATION.md  FRONTEND_REVAMP_COMPLETE.md  FRONTEND_REVAMP_SUMMARY.md  (+56 more)
(+257 files in other folders)
