[project]
name = "fury-sdk"
version = "0.0.16"
description = "A flexible AI agent library with tool support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "termcolor",
]

[project.optional-dependencies]
examples = [
    "pydantic",
    "python-dotenv",
]
test = [
    "pytest",
]
voice = [
    "faster-whisper",
    "numpy",
    "sounddevice>=0.5.5",
    "soundfile",
]
tts = [
    "numpy",
    "soundfile",
    "torch",
    "phonemizer",
    "llama-cpp-python",
    "neucodec",
    "onnxruntime>=1.17.3,<1.24",
    "huggingface-hub>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fury"]
